[package]
name = "jolt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
csv = "1.3.0"
prettytable-rs = "0.10.0"
serde = { version = "1.0.196", features = ["derive"] }
serde-xml-rs = "0.6.0"
serde_json = "1.0.113"
sysinfo = "0.30.5"
xml-rs = "0.8.19"
