workspace = { members = ["beacon", "ratchet"] }
[package]
name = "jolt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
clap = { version = "4.4.18", features = ["derive"] }
csv = "1.3.0"
prettytable-rs = "0.10.0"
serde = { version = "1.0.196", features = ["derive"] }
serde-xml-rs = "0.6.0"
serde_json = "1.0.113"
sysinfo = "0.30.5"
tokio = { version = "1.36.0", features = ["full"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
xml-rs = "0.8.19"
ratchet = { path = "ratchet" }
tower = { version = "0.4.13", features = ["util", "timeout"] }
tower-http = { version = "0.5.2", features = ["add-extension", "trace"] }
tracing = "0.1.40"
anyhow = "1.0.81"
rayon = "1.10.0"
tempfile = "3.10.1"
