[package]
name = "jolt-ui"
version = "0.1.0"
authors = ["root"]
license = "MIT"
edition = "2021"

[dependencies]
crossterm = { version = "0.27.0", features = ["event-stream"] }
futures = "0.3.30"
ratatui = "0.26.0"
tokio = { version = "1.35.1", features = ["full"] }
sys_tools = { path = "../sys_tools" }