[package]
name = "ratchet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
prettytable-rs = "0.10.0"
serde = { version = "1.0.196", features = ["derive"] }
serde-xml-rs = "0.6.0"
serde_json = "1.0.113"
sysinfo = "0.30.5"
xml-rs = "0.8.19"
anyhow = "1.0.81"
rayon = "1.10.0"
tempfile = "3.10.1"
tokio = { version = "1.36.0", features = ["full"] }
psutil = "3.3.0"